Hotfix release 6.10.7 and 7.0.15

--- a/docs/releases/release_notes/6.10.md
+++ b/docs/releases/release_notes/6.10.md
@@ -8,49 +8,32 @@ description: In this section, you can find the release notes for v6.10 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
+## v6.10.7 (February 4th, 2025; GA)
+
+```
+SHA256 (ipfabric-update-6-10-7+0.tar.gz.sig) = a2e066672810aeb48210c8e361888e7525bd42e58436a49c4c223c03b72bc20a
+MD5 (ipfabric-update-6-10-7+0.tar.gz.sig) = f3b15495664f76f29afdb89059f622a4
+SHA256 (ipfabric-6-10-7+0.ova) = 2997e64716a3d518b946824ecd91954b4b80d2539b42325638d4ba2a793049ce
+MD5 (ipfabric-6-10-7+0.ova) = a41c1e5bb2f4da39421307da9eaef527
+SHA256 (ipfabric-6-10-7+0.qcow2) = 2cecdd26a7ef2d6e052d6ea15df593f27aa4f2bb8b8c2e284ead48b910470815
+MD5 (ipfabric-6-10-7+0.qcow2) = 26e2f183f5ea7ef4af8e7c718a8e6dba
+SHA256 (ipfabric-6-10-7+0.vmdk) = 4a858e0a13d3c30462ea959cd475da3b94ae0f6cec68eab19615948e2b780fab
+MD5 (ipfabric-6-10-7+0.vmdk) = 02e056826dbcf9cca33d36292d02af92
+```
+
+- A **critical vulnerability** has been fixed. We strongly recommend that all customers upgrade to this version. If upgrading is not feasible, please contact our [support team](https://support.ipfabric.io) for assistance in applying the hotfix.  
+- Resolved kernel-related issues that prevented older installations from upgrading to the `7.0` release.  
+
 ## v6.10.6 (December 30th, 2024; GA)
 
-```
-SHA256 (ipfabric-update-6-10-6+1.tar.gz.sig) = 44198e6dcd93584adc3f62f4d8df83b2310b6a5fcf5702c25d670511966cc31d
-MD5 (ipfabric-update-6-10-6+1.tar.gz.sig) = 34300d89900e2e21eeba6b72313dce1e
-SHA256 (ipfabric-6-10-6+1.ova) = b3953b97b7ee305a92d57f3a15ed12ce8d388af0fa43d901a078deef7ea9e536
-MD5 (ipfabric-6-10-6+1.ova) = c4f07e13d9c996d67f4edb493936d544
-SHA256 (ipfabric-6-10-6+1.qcow2) = 529a4dbe660752c085e44bce8b61103996bc0fd620d2f7ef2e18b8d7716ed654
-MD5 (ipfabric-6-10-6+1.qcow2) = ab1638e02e23e2cb517d0d02d8fa6608
-SHA256 (ipfabric-6-10-6+1.vmdk) = faeaae7a8865eca862eda5b12f28d7fc3a5302013a5a1484ec40deeac02fce52
-MD5 (ipfabric-6-10-6+1.vmdk) = 5d0b876d77feb7b21aa55392ecdad17b
-```
-
-- The login method for the new upgrade portal to version `7.x` has been changed.
+- The login method for the new upgrade portal to version 7.x has been changed.
 Basic authentication has been replaced with a cookie-based login method.
 
 ## v6.10.5 (November 27th, 2024; GA)
 
-```
-SHA256 (ipfabric-update-6-10-5+0.tar.gz.sig) = dc976c3f218651c950f73f0b57289cb2a58668068d1d00ba99acd0eb71e064bb
-MD5 (ipfabric-update-6-10-5+0.tar.gz.sig) = 010903af5e16004637afc6892c57263b
-SHA256 (ipfabric-6-10-5+0.ova) = f5df9ab32a4070729d03943bac47a235f53a28078f534df760c4f184aa074d02
-MD5 (ipfabric-6-10-5+0.ova) = 3905c67d59630528f64b7064b1f3c939
-SHA256 (ipfabric-6-10-5+0.qcow2) = 052e6fd8ed64979b7349547cd8e553bc9b4566838bd1729bf12cf4e9e7782b80
-MD5 (ipfabric-6-10-5+0.qcow2) = f17cef9d3e28cc803bd9e395cbbf6925
-SHA256 (ipfabric-6-10-5+0.vmdk) = da174690a0f742fda38cc736586e0ae71ff1d56e4d2a19a2ef8fef0e0db63cce
-MD5 (ipfabric-6-10-5+0.vmdk) = 6c0ccffa2514d19d5bb59ca1cb5a8582
-```
-
 - Fixed issue for air-gapped environments unable to reach `callhome.ipfabric.io` service.
 
 ## v6.10.4 (October 21st, 2024; GA)
-
-```
-SHA256 (ipfabric-update-6-10-4+0.tar.gz.sig) = fa6e94456a842e03a740c1b8ebae66fa26bd14d55667b0dcb732e06b925eac5b
-MD5 (ipfabric-update-6-10-4+0.tar.gz.sig) = e93ed0db74f6c24fab801c1ea6f8a3da
-SHA256 (ipfabric-6-10-4+0.ova) = ee5d9148b4ef8060421e37b5866bb8c411db7873e3e6ba7001a826662c1cc353
-MD5 (ipfabric-6-10-4+0.ova) = 4ebd3b8329947dc46f4e5fbe66e0148d
-SHA256 (ipfabric-6-10-4+0.qcow2) = 7b9809fb92feff9fb9f3bbb521e562d132d05cd0dfcfdd01c0e9cdc0b63d0347
-MD5 (ipfabric-6-10-4+0.qcow2) = 01cb0fb21fc7adc6f1e58b5c03a1cf32
-SHA256 (ipfabric-6-10-4+0.vmdk) = 5668857bfb46be8349e9744046be6495c00e2a6a3042598fd2c6f219e876e8c0
-MD5 (ipfabric-6-10-4+0.vmdk) = f22702794e6b0ab626ff09228066da7e
-```
 
 ### New Upgrade Process
 
