--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -8,22 +8,28 @@ description: In this section, you can find the release notes for v7.0 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v7.0.14 (February 26th, 2025; GA)
+## v7.0.15 (March 4th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-0-14+0.tar.zst.sig) = cbedaf4b0d8d2d31b7e67bdfb5867dbb64a9d98a13fea86a87621619692e7b5d
-MD5 (ipfabric-update-7-0-14+0.tar.zst.sig) = 652f6f136741df104eb4498acc0cac41
-SHA256 (ipfabric-7-0-14+0.ova) = 18c32a6bf8002b40a32e3ff0da123524424800abd19da7719b05a8feb1d257d4
-MD5 (ipfabric-7-0-14+0.ova) = 30d3869dace98ab28359fd9650f3bf5d
-SHA256 (unsupported-sha1-ipfabric-7-0-14+0.ova) = a028c4ec5e9416832ab01b994b744e260cc8629cac6610b0865605d83269a47b
-MD5 (unsupported-sha1-ipfabric-7-0-14+0.ova) = d3e56fbfed3fce4c9b5db10210582648
-SHA256 (ipfabric-7-0-14+0.qcow2) = 0f5117f67888d75614118d32a095dbadb162e95f92725fe2c1dabfa0583fec70
-MD5 (ipfabric-7-0-14+0.qcow2) = af93269a2cf113d48ec216be6ecb84c4
-SHA256 (ipfabric-7-0-14+0.vmdk) = 7d0ba208b972d11b83664580f3e802af2dcecab48ba975c8332a1893f91cd4c9
-MD5 (ipfabric-7-0-14+0.vmdk) = 83fa8402654786e9c97fc73198c70e1f
-SHA256 (ipfabric-7-0-14+0.vhdx.zst) = ced2e831456d7adab5960878c19106d10c54a306780636fef9f3fae967378c9c
-MD5 (ipfabric-7-0-14+0.vhdx.zst) = 93fb5d279fa88d3b0ee516438db7c4be
+SHA256 (ipfabric-update-7-0-15+0.tar.zst.sig) = 4503f3ddf0f5ff5236d556901208d0f70cf006ee62710fd37b75486499dbdc64
+MD5 (ipfabric-update-7-0-15+0.tar.zst.sig) = 27cdb4462a6bd12c1cca8d656ee3b8f1
+SHA256 (ipfabric-7-0-15+0.ova) = 38906e96891669316a9bc649accb3b20994b9dd4b8edcb8828312055d910c31a
+MD5 (ipfabric-7-0-15+0.ova) = 1970af2e302a8e0b3425353661a9369f
+SHA256 (unsupported-sha1-ipfabric-7-0-15+0.ova) = 3580ef2562ddad956e1ef12ed0520a13a48ebae175fcbf3f327d33e202d067a7
+MD5 (unsupported-sha1-ipfabric-7-0-15+0.ova) = ce70db5ded183970a194342e89f17470
+SHA256 (ipfabric-7-0-15+0.qcow2) = 4287b3a43818bd2bddbcfbd3230a41ec722672b3ea07d820ba006bf9c3dc51e4
+MD5 (ipfabric-7-0-15+0.qcow2) = 036231ff0132008ec96121799ddce667
+SHA256 (ipfabric-7-0-15+0.vmdk) = 6978a8ebe0ff31cf2cb2dbaaa78f3e377a17c9071ec29d043aa2bf4ea1eae368
+MD5 (ipfabric-7-0-15+0.vmdk) = d0b351a02f63c16c0103ea63055585c3
+SHA256 (ipfabric-7-0-15+0.vhdx.zst) = 4412aa00d1afb5bf0a437de17c768691a09872c2d4904c1b41b8be14e91c7bff
+MD5 (ipfabric-7-0-15+0.vhdx.zst) = 55f56971c0d1c4a9cc1b9ab54b43e1d3
 ```
+
+### Fixes
+
+- A **critical vulnerability** has been fixed. We strongly recommend that all customers upgrade to this version. If upgrading is not feasible, please contact our [support team](https://support.ipfabric.io) for assistance in applying the hotfix.  
+
+## v7.0.14 (February 26th, 2025; GA)
 
 ### Fixes
 
