ST-430 adding ipv6 mention junos rn + backport to 7.0

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -318,6 +318,10 @@ For more information, please refer to the [IPv4 Managed IP Summary table documen
       - Export of temporarily visible hidden nodes in "Show Hidden Nodes" mode.
       - Export of group boundaries.
 
+#### Juniper
+
+- **IPv6 Routing Table** -- Now supported on JunOS platforms. It can be found in an existing technology table at `/technology/routing/routes/ipv6`.
+
 #### Interactive API Documentation
 
 - **Explore and Test Workflows Directly From the API Documentation** -- Interactive API documentation (powered by `RapiDoc`) allows you to see predefined schemas and make requests directly from your web browser. You can find it at `https://<host>/api/rapidoc`.
