MQ-6350 Update the release notes and LLRN for 7.2

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -1,20 +1,29 @@
 ---
 description: In this section, you can find the release notes for v7.2 releases.
-tags: ["draft"]
 ---
 
 # IP Fabric v7.2
-
-!!! danger "Unreleased Version"
-
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
 
 --8<-- "snippets/upgrade_version_policy.md"
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v7.2.0 (UNRELEASED)
+## v7.2.5 (March 17th, 2025; EA)
+
+```
+SHA256 (ipfabric-update-7-2-5+0.tar.zst.sig) = d109880359565d8fe25a0f9e0f8f961c261a2c6d84b3a907637266c1e7b18f26
+MD5 (ipfabric-update-7-2-5+0.tar.zst.sig) = 2932f484391d11ea3b79bdccfbb6407d
+SHA256 (ipfabric-7-2-5+0.ova) = caf82d11c7ada6c98056c7787d0b249b0347bfa60afcedba361bf56fa1ee855b
+MD5 (ipfabric-7-2-5+0.ova) = 70e5ff7b1befc776d207c907029c93b8
+SHA256 (unsupported-sha1-ipfabric-7-2-5+0.ova) = 5f60e1a5c2325a3b2da9989308b6f600a41c64a3557f26ec108e9b4f32af7660
+MD5 (unsupported-sha1-ipfabric-7-2-5+0.ova) = be4aafed9d63b12eebdbef46d56b7733
+SHA256 (ipfabric-7-2-5+0.qcow2) = 741074a9a5d15fdb8d82ea98ba9f15b19570d34a072766687af5038a869dbd4b
+MD5 (ipfabric-7-2-5+0.qcow2) = 7784fd5faa8e48217690c071e167a2be
+SHA256 (ipfabric-7-2-5+0.vmdk) = 33173b31cb00fc56489284218e7ca03033cf41e9a5011a5bb0ebc02f0e8a9965
+MD5 (ipfabric-7-2-5+0.vmdk) = 5bc4182ddf2545932f70ddd7b463e365
+SHA256 (ipfabric-7-2-5+0.vhdx.zst) = 5606326c1ee96927804957bfc72c09acde89e91233f54265b440d812bc2499a7
+MD5 (ipfabric-7-2-5+0.vhdx.zst) = eb33e6d0e2a631730d5ffb426633f28e
+```
 
 ### API Endpoints Deprecation
 
