NIM-17259: add uptime to device filters

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -54,3 +54,10 @@ and enter the name of the list as it appears in the configuration.
 - Switch priority is now available for **Cisco** **StackWise**.
 - Downloading the content of the `External Dynamic List` object for **Palo Alto**'s URL Filtering and IP List must be
 [enabled manually via a feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_PALOALTO_EDL_IPLIST`, `ENABLE_PALOALTO_EDL_URLLIST`).
+
+#### Advanced Filters
+
+- **Device Attribute-Based Advanced Filters**
+now support **Uptime** as a device property.
+- For a complete list of properties and supported tables, refer to [Technology Tables -- Device-Based Advanced Filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
+
