NIM-17971 ExpressRoute to RN & IAM policy update [7.3]

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -30,6 +30,9 @@ tags: ["draft"]
 - **New Device** –- **AWS Application Load Balancer (ALB)**
   - Initial support for data collection & inventory. The path lookup via ALB is not supported yet.
 
+- **New Device** –- **Azure ExpressRoute Circuit (ERC)**
+  - Data collection and end-to-end path lookup via ERC are now supported. However, path lookup via ERC when deployed in vWAN is not yet supported.
+
 - **New Capabilities -- CheckPoint, Juniper**
   - Support for URL filtering has been added.
 
