--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -41,8 +41,16 @@ tags: ["draft"]
 
 #### Vendor Support and Improvements
 
-- Added IPv6 support for FortiGate zone firewall tasks.
+- Added IPv6 support for FortiGate zone firewall task.
 - Added IPv6 support for FortiGate GRE tunnels.
+- Added IPv6 support for Cisco ACI, ASA, IOS, IOS-XE NTP task
+- Added IPv6 support for Cisco IOS, IOS-XE, ASA Syslog task
+- Added IPv6 support for Cisco IOS, IOS-XE, ASA AAA task
+- Added IPv6 support for Cisco IOS, IOS-XE, ASA SNMP task
+- Added IPv6 support for Cisco ASA Neighbor Discovery task
+- Added IPv6 support for Cisco ASA IPv6 routing
+- Added IPv6 support for Cisco ASA IPv6 tunnels
+- Added IPv6 support for Cisco ASA, IOS, IOS-XE IPv6 IPsec
 
 #### Path Lookup
 
