--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -25,6 +25,10 @@ tags: ["draft"]
 - An additional column was added to the **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table:
   - `Switch Priority`
 
+#### Layout Optimization for Large Circular Graphs
+
+In release 7.2, we added an autonomous optimization switch from circular to universal layout for graphs exceeding 100 nodes. Now, we have added full support for it at the API level. It's also fully visible in our UI starting with this release.
+
 #### Network Discovery
 
 - **New Device** –- **AWS Application Load Balancer (ALB)**
