--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -24,6 +24,13 @@ tags: ["draft"]
   - `Last Status Change`
 - An additional column was added to the **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table:
   - `Switch Priority`
+- Removed tables of already deprecated API endpoints:
+  - `Managed Networks`
+  - `Gateway Redundancy`
+
+  !!! info "IPv4 Managed IP Summary table"
+
+      As of version `7.0`, the Managed Networks and Gateway Redundancy tables have been replaced by the [IPv4 Managed IP Summary table](../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
 
 #### Layout Optimization for Large Circular Graphs
 
