text improved NAE/NIM-17633

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -34,7 +34,8 @@ tags: ["draft"]
 
 #### Layout Optimization for Large Circular Graphs
 
-In release 7.2, we added an autonomous optimization switch from circular to universal layout for graphs exceeding 100 nodes. Now, we have added full support for it at the API level. It's also fully visible in our UI starting with this release.
+In release 7.2, we added an autonomous optimization switch from circular to universal layout for graphs with more than 100 nodes. This functionality
+is now fully supported at the API level and is also fully integrated into the UI starting with this release.
 
 #### Network Discovery
 
