NIM-16193 Update images and description for configuration management page

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -37,6 +37,11 @@ tags: ["draft"]
 In release 7.2, we added an autonomous optimization switch from circular to universal layout for graphs with more than 100 nodes. This functionality
 is now fully supported at the API level and is also fully integrated into the UI starting with this release.
 
+#### Configuration Management
+
+- Simplified configuration selection for comparison.
+- Added a new `Compare with previous version` button to configuration entries in the table.
+
 #### Network Discovery
 
 - **New Device** –- **AWS Application Load Balancer (ALB)**
