NIM-18804 Azure RouteServer to RN 7.3

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -48,7 +48,10 @@ is now fully supported at the API level and is also fully integrated into the UI
   - Initial support for data collection & inventory. The path lookup via ALB is not supported yet.
 
 - **New Device** –- **Azure ExpressRoute Circuit (ERC)**
-  - Data collection and end-to-end path lookup via ERC are now supported. However, path lookup via ERC when deployed in vWAN is not yet supported.
+  - Data collection and end-to-end path lookup via ERC is now supported. The path lookup via ERC when deployed in vWAN is not supported yet.
+
+- **New Device** –- **Azure RouteServer (ARS)**
+  - Initial support for data collection & inventory - end-to-end path lookup via Network Virtual Appliances has been improved.
 
 - **New Capabilities -- CheckPoint, Juniper**
   - Support for URL filtering has been added.
