ST-434 mention about update process freeze

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -498,6 +498,8 @@ System administration UI on port `8443` will be removed in the near future. In v
 ### Known Issues
 
 - When a Palo Alto firewall is connected to the infrastructure using a port-channel, but the port-channel configuration is missing on the device, the Layer 2 (L2) connection is not established in the network graphs. As a result, end-to-end traffic fails to traverse at the L2 level.
+- Sometimes, downloading a new IPF version via the **Update Portal** freezes and requires recovery. Please follow [these](../../support/known_issues/IP_Fabric/download_process_freeze.md)
+steps to recover the download process.
 
 ### Beta Features
 
