ST-434 backporting of MR!1278

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -495,6 +495,8 @@ For more details, see the [System Administration UI](../../System_Administration
 
 - When a Palo Alto firewall is connected to the infrastructure using a port-channel, but the port-channel configuration is missing on the device, the Layer 2 (L2) connection is not established in the network graphs. As a result, end-to-end traffic fails to traverse at the L2 level.
 To mitigate the impact, lower the `Limit download BGP routes` setting in `/settings/discovery-snapshots/global-discovery-settings`.
+- Sometimes, downloading a new IPF version via the **Update Portal** freezes and requires recovery. Please follow [these](../../support/known_issues/IP_Fabric/download_process_freeze.md)
+steps to recover the download process.
 
 ### Beta Features
 
