SA-574 7.3 Intent Rules

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -92,3 +92,68 @@ and enter the name of the list as it appears in the configuration.
 now support **Uptime** as a device property.
 - For a complete list of properties and supported tables, refer to [Technology Tables -- Device-Based Advanced Filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
 
+#### Intent Verification Rules
+
+##### Updated Rules
+
+- Minor UI updates to remove the Green Success check from empty columns and to revise field descriptions.:
+  - *Technology > Security > DHCP Snooping*
+    - **DHCP Snooping Enabled VLANs**
+    - **DHCP Snooping Trusted Port**
+    - **DHCP Snooping Dropped Packets**
+  - *Inventory > OS Versions > Platforms*
+    - **Devices with Unique Platform** changed to **Platforms with a Single Deployment**
+    - **Devices with Unique OS** changed to **OS Versions with a Single Deployment**
+  - *Inventory > OS Versions > Models*
+    - **Devices with Unique Model** changed to **Models with a Single Deployment**
+  - *Technology > Management > Port Mirroring > Port Mirroring* - **Port Mirroring Status**
+  - *Technology > MPLS > L2 VPN > Circuit cross-connect*
+    - **CCC state** changed to **Circuit Cross-Connect State**
+  - *Technology > SDWAN > Versa > Sites*
+    - **SDWAN Sites Uptime** changed to **Versa SDWAN Sites Uptime**
+- *Technology > Spanning Tree > STP Inconsistencies > Neighbor ports allowed VLAN mismatch* - **Trunk Allowed VLAN Mismatch**
+  - Removed Green Success check as this rule is not applicable.
+- *Technology > FHRP > Group state* - **FHRP Active Group Priority**
+  - Adjusted `active` FHRP groups to include `master` for support on Aruba and Arista devices.
+- *Technology > Platforms > Environment > Power Supplies* - **Power-Supply State**
+  - Adjusted Red Error states to include power supplies with a `bad` state.
+- *Technology > Platforms > Environment > Fans* - **Fan Module State**
+  - Adjusted Green Success states to include fan modules that contain an `ok -` state.
+- *Inventory > Interfaces* - **Interface Operational State**
+  - Green Success - Default which should match normal states.
+  - Blue Info - Layer 2 states of `unknown` (i.e. IP Fabric is unable to discover states on some Meraki devices.)
+  - Amber Warning - Interfaces with Layer 1 state matching regex `up|enabled`  and Layer 2 state of `down` without `monitoring` status reason.
+- *Technology > Addressing > MAC Table > MAC Table* - **MAC Address Source**
+  - Green Success - Added `igmp` to the list of acceptable source types.
+  - Blue Info and Amber Warning have been swapped so static MAC address types report as Info instead of Warning.
+  - Blue Info - Added `svi`, `permanent`, and `management` to the list of acceptable source types.
+
+##### New Rules
+
+- SDWAN Uptime Verifications:
+  - Rules:
+    - *Technology > SDWAN > Silverpeak > Overlay* - **Silverpeak Overlay Uptime**
+    - *Technology > SDWAN > Viptela > Control Connections* - **Viptela Control Connections Uptime**
+    - *Technology > SDWAN > VeloCloud > Overlay* - **VeloCloud Overlay Uptime**
+  - Green Success - `1 year >= uptime >= 1 week`
+  - Blue Info - `uptime > 1 year`
+  - Amber Warning - `uptime < 1 week`
+  - Red Error - `uptime < 1 day`
+- SDWAN Status Verifications:
+  - Rules:
+    - *Technology > SDWAN > Silverpeak > Overlay* - **Silverpeak Overlay Status**
+    - *Technology > SDWAN > Silverpeak > Underlay* - **Silverpeak Underlay Status**
+  - Green Success - Status that is Up Active or Up Idle
+  - Blue Info - Status that is Down or other statuses
+  - Amber Warning - Status that is Up but with IP SLA Disabled or Reduced Functionality
+  - Red Error - Status that is Down and Misconfigured
+- Load Balancing Availability Verifications:
+  - Rules:
+    - *Technology > Load-balancing > Virtual Servers* - **Load Balancing Virtual Server Availability**
+    - *Technology > Load-balancing > Virtual Servers* - Pool members - **Load Balancing Pool Member Availability**
+  - Green Success - Up Availability and Enabled status
+  - Blue Info - All other statuses.
+  - Amber Warning - Down Availability and Enabled status
+- *Technology > Management > AAA > Password Strength* - **Password Strength Enabled**
+  - Green Success - Check is enabled on supported platforms
+  - Amber Warning - Check is not enabled  on supported platforms
