Document system upgrade improvements for 7.2

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -41,6 +41,12 @@ The System Administration UI on port `8443` has been deprecated in version `7.0`
 * [System Update](../../System_Administration/system_update.md)
 * [Restore Admin Access](../../System_Administration/IPF_CLI_Config/set_gui_admin_pass.md)
 
+### System upgrade improvements
+
+- The upgrade UI has switched from basic HTTP authentication to cookie/session-based authentication.
+- Downloading a remote upgrade package via the UI now displays download progress, which is also logged in the systemd journal.
+- Improved timeout management provides better handling on systems with slow disk I/O or during network interruptions.
+
 ### Layout Optimization for Large Circular Graphs
 
 Circular graphs with over 100 nodes experienced slow rendering and oversized layouts due to complex line-crossing minimization calculations. This also impacted snapshot discovery/loading performance due to prolonged node position caching.
