ST_438-removed version_names

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -2,7 +2,7 @@
 description: In this section, you can find the release notes for v6.0 releases.
 ---
 
-# IP Fabric v6.0 (Aertex)
+# IP Fabric v6.0
 
 --8<-- "snippets/clear_browser_cache.md"
 
