--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -2,7 +2,7 @@
 description: In this section, you can find the release notes for v6.3 releases.
 ---
 
-# IP Fabric v6.3 (Camlet)
+# IP Fabric v6.3
 
 --8<-- "snippets/upgrade_version_policy.md"
 
