--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -2,7 +2,7 @@
 description: In this section, you can find the release notes for v6.1 releases.
 ---
 
-# IP Fabric v6.1 (Burlap)
+# IP Fabric v6.1
 
 --8<-- "snippets/upgrade_version_policy.md"
 
