--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -59,6 +59,29 @@ is now fully supported at the API level and is also fully integrated into the UI
 - **New Capabilities -- PaloAlto (PAN-OS)**
   - Support for IP and PREDEFINED-IP type objects of `External Dynamic List` has been added.
 
+#### Initial transparent firewall support (behind feature flag)
+  Initial support for **transparent firewalls** has been introduced. Since transparent firewalls typically operate at Layer 2 and remain **invisible to other network devices**, manual link configuration is required to incorporate them into the network model.  
+
+  To enable this feature, the corresponding [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links--transparent-firewall-added-in-73) must be activated. Once enabled, transparent firewalls will appear in the **graph topology**, and **basic path lookup** (excluding security policy evaluation) will be supported.
+
+ **Supported Vendors & Technologies**
+
+ - **Virtual Wire Setup**
+ 
+  A new table has been added under **Technology → Interfaces → Virtual-wires**, supporting:
+  
+  - Palo Alto PAN-OS
+  - Cisco Firepower
+  - Fortinet FortiGate / FortiOS
+  - Forcepoint NGFW
+
+ - **Virtual Bridge Property**
+ 
+  Currently supported for Cisco Firepower. A new **Virtual Bridge** attribute has been added to the following tables:
+ 
+  - **Technology → Interfaces → Switchport**
+  - **Technology → Addressing → MAC Table**
+
 #### Vendor Support and Improvements
 
 - Added IPv6 support for FortiGate zone firewall task.
