NIM-18707 update 7.3 release notes with ipv6

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -37,6 +37,34 @@ tags: ["draft"]
 In release 7.2, we added an autonomous optimization switch from circular to universal layout for graphs with more than 100 nodes. This functionality
 is now fully supported at the API level and is also fully integrated into the UI starting with this release.
 
+#### IPv6 Support to Discovery
+
+Extended network discovery capabilities to support IPv6 networks alongside IPv4, ensuring all existing IPv4 functionality remains unaffected.
+
+##### Backward Compatibility
+
+- Existing IPv4 discovery workflows continue to function as expected.
+- No changes are required for IPv4-only setups.
+
+##### API Enhancements
+
+- The `/settings` API now accepts and processes **IPv6 addresses** in:
+  - Seed lists
+  - Include/Exclude/Whitelist networks
+  - Device credentials
+  - Custom SSH/Telnet ports
+- Address-type validation ensures that:
+  - IPv4 filters apply only to IPv4 addresses
+  - IPv6 filters apply only to IPv6 addresses
+
+##### Discovery Configuration Updates
+
+- Introduced a new task type: `NDPv6`, available under **Global Discovery Tasks** settings.
+- IPv6 networks can now be discovered using a combination of:
+  - Seed addresses
+  - Include/Exclude/Whitelist networks
+  - Device credentials
+
 #### Configuration Management
 
 - Simplified configuration selection for comparison.
