St 434 backport to 610

--- a/docs/releases/release_notes/6.10.md
+++ b/docs/releases/release_notes/6.10.md
@@ -121,3 +121,8 @@ remove them in the next major version `7.0`.
   has been dramatically improved, resulting in a significant performance boost.
   This enhancement resolves issues where discovery process would get stuck when
   processing very large routing tables.
+
+### Known Issues
+
+- Sometimes, downloading a new IPF version via the **Update Portal** freezes and requires recovery. Please follow [these](../../support/known_issues/IP_Fabric/download_process_freeze.md)
+steps to recover the download process.
