NIM-18901 Update policies

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -41,6 +41,28 @@ The System Administration UI on port `8443` has been deprecated in version `7.0`
 * [System Update](../../System_Administration/system_update.md)
 * [Restore Admin Access](../../System_Administration/IPF_CLI_Config/set_gui_admin_pass.md)
 
+### RBAC Fixes
+
+After reviewing our built-in RBAC policies, we have made the following changes. This is to ensure that the policies
+are more consistent with the intended use cases. If your roles require access to these endpoints, please create a
+[custom RBAC policy](../../IP_Fabric_Settings/administration/policies.md) and assign it to the 
+[required role(s)](../../IP_Fabric_Settings/administration/roles.md).
+
+These policies have been removed from the built-in `others` (ID of `read`) and moved to `settings`:
+
+- `POST /os/generate-nimpee-cert`: Generate IP Fabric certificate
+- `POST /os/upload-nimpee-cert`: Upload certificate to platform
+- `POST /os/maintenance`: Trigger platform maintenance
+- `POST /os/snapshots-retention`: Trigger snapshot retention
+- `POST /os/techsupport`: Generate techsupport file
+- `POST /os/clean-db`: Clean system database
+- `POST /jobs/{key}/cancel`: Cancel specific job
+- `POST /jobs/{key}/force-stop`: Force stop running system job
+- `POST /jobs/{key}/stop`: Stop running system job
+- `GET /jobs/{key}/download`: Return result of system job
+  - With the introduction of the new [Configuration Import/Export](#configuration-importexport) users without `settings` policies are able to download and view all settings.
+  - Our team is working on a feature to provide RBAC based on the type of file (configuration, snapshot, techsupport). This will be available in a future release.
+
 ### System upgrade improvements
 
 - The upgrade UI has switched from basic HTTP authentication to cookie/session-based authentication.
